--- a/kubernetes/pipeline.properties
+++ b/kubernetes/pipeline.properties
@@ -1,15 +1,15 @@
-version=
-namespace=
-image=
-appname=
-containerName=
+version=0.0.1
+namespace=hdlee
+image=hdlee/front-service
+appname=front-hdlee
+containerName=front-hdlee
 deployment=kubernetes/deployment.yaml
 service=kubernetes/service.yaml
 
 #Docker Settings
 dockerRegistry=https://index.docker.io/v1/
-credentialRegistry=
+credentialRegistry=docker-auth
 
 #SonarQube
-sonarQubeURL=http://169.56.75.38:32001/
-sonarQubeProject=
+sonarQubeURL=http://169.56.75.46:31990
+sonarQubeProject=front-hdlee
