--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-kisjang
+  name: frontend-hdlee
   labels:
-    app: frontend-kisjang
+    app: frontend-hdlee
 spec:
   selector:
     matchLabels:
-      app: frontend-kisjang
+      app: frontend-hdlee
   replicas: 1
   template:
     metadata:
       labels:
-        app: frontend-kisjang
+        app: frontend-hdlee
     spec:
       containers:
-        - name: frontend-kisjang
-          image: nalleyda/frontend-kisjang
+        - name: frontend-hdlee
+          image: hdlee/frontend-hdlee
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
