--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: 
+  name: frontend-hdlee
   labels:
-    name: 
+    name: frontend-hdlee
 spec:
   ports:
     - port: 3000
       targetPort: 3000
       protocol: TCP
   selector:
-    app: 
+    app: frontend-hdlee
   type: NodePort
