--- a/kubernetes/pipeline.properties
+++ b/kubernetes/pipeline.properties
@@ -1,8 +1,8 @@
 version=0.0.1
 namespace=hdlee
 image=hdlee/front-service
-appname=front-service
-containerName=front-service
+appname=front-hdlee
+containerName=front-hdlee
 deployment=kubernetes/deployment.yaml
 service=kubernetes/service.yaml
 
