--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: frontend-hdlee
-          image: hdlee/frontend-service
+          image: hdlee/front-service
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
